# skill-tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  index.html  package-lock.json  package.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: CODEOWNERS  bug.yml  task.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: f60470687a86_baseline_schema.py
app/: main.py
app/api/: deps.py
app/api/v1/: skills.py
app/core/: config.py  database.py  errors.py  security.py
app/models/: __init__.py  base.py  enums.py  experience.py  skill.py  task.py  user.py
app/repositories/: skill_repo.py
app/schemas/: skill.py
app/services/: exceptions.py  skill_service.py
docs/: CONTRIBUTING.md  schema.md
tests/: conftest.py  test_health.py  test_skill_service.py  test_skills_api.py
