[tool.poetry]
name = "skill-tracker"
version = "0.1.0"
description = "Task tracker with skill progression"
authors = ["Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.32" }
sqlalchemy = "^2.0"
asyncpg = "^0.30"
alembic = "^1.13"
pydantic = "^2.9"
pydantic-settings = "^2.5"
pyjwt = "^2.9"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
bcrypt = "4.1.3"
redis = "^5.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7"
pytest = "^8.3"
pytest-asyncio = "^0.24"
httpx = "^0.27"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
